--- a/css/genso.css
+++ b/css/genso.css
@@ -9,16 +9,16 @@
     font-family: "メイリオ", "Meiryo UI", "MS UI Gothic", "ヒラギノ角ゴシック" , "system-ui";
 }
 
-body {
+body{
     background-color: #f3f5f9;
 }
 
-.wrapper {
+.wrapper{
     display: flex;
     position: relative;
 }
 
-.wrapper .sidebar {
+.wrapper .sidebar{
     width: 200px;
     height: 100%;
     background: #3b58a8;
@@ -26,34 +26,34 @@ body {
     position: fixed;
 }
 
-.wrapper .sidebar h2 {
+.wrapper .sidebar h2{
     color: #fff;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 30px;
 }
 
-.wrapper .sidebar ul li {
+.wrapper .sidebar ul li{
     padding: 15px;
     border-bottom: 1px solid #bdb8d7;
     border-bottom: 1px solid rgba(0,0,0,0.05);
     border-top: 1px solid rgba(255,255,255,0.05);
 }
 
-.wrapper .sidebar ul li a {
+.wrapper .sidebar ul li a{
     color: #bdb8d7;
     display: block;
 }
 
-.wrapper .sidebar ul li a .fas {
+.wrapper .sidebar ul li a .fas{
     width: 25px;
 }
 
-.wrapper .sidebar ul li:hover {
+.wrapper .sidebar ul li:hover{
     background-color: #87c9dd;
 }
 
-.wrapper .sidebar ul li:hover a {
+.wrapper .sidebar ul li:hover a{
     color: #fff;
 }
 
@@ -62,7 +62,7 @@ body {
     color: gainsboro;
 }
 
-.wrapper .sidebar .social_media {
+.wrapper .sidebar .social_media{
     position:absolute;
     bottom: 0;
     left: 50%;
@@ -70,7 +70,7 @@ body {
     display: flex;
 }
 
-.wrapper .sidebar .social_media a {
+.wrapper .sidebar .social_media a{
     display: block;
     width: 40px;
     background: #1a3c99;
@@ -83,66 +83,42 @@ body {
     border-top-right-radius: 5px;
 }
 
-.wrapper .main_content {
+.wrapper .main_content{
     width: 100%;
     margin-left: 200px;
 }
 
-.wrapper .main_content .header {
+.wrapper .main_content .header{
     padding: 20px;
     background: #fff;
     color: #717171;
     border-bottom: 1px solid #e0e4e8;
 }
 
-.wrapper .main_content .info {
+.wrapper .main_content .info{
     margin: 20px;
     color: #717171;
     line-height: 25px;
 }
 
-.wrapper .main_content .info div {
+.wrapper .main_content .info div{
     margin-bottom: 20px;
 }
 
-img {
-    max-width: 100%;
-    width: 300px;
+.sample-table {
+    border-collapse: collapse;
+    border: 1px solid #000;
 }
 
-.wrapper .main_content .mb-600 {
-    margin-bottom: 600px;
+.sample-th {
+    border: 1px solid #000;
 }
 
-.wrapper .main_content .mb-600 h2 {
-    margin-bottom: 100px;
-    text-align: center;
+.sample-td {
+    border: 1px solid #000;
 }
 
-.fadein {
-    opacity: 0;
-    transform: translate(0,80px);
-    transition: all 800ms;
-}
-
-.fadein.left {
-    transform: translate(-80px,0);
-}
-
-.fadein.right {
-    transform: translate(80px,0);
-}
-
-.fadein.top {
-    transform: translate(0,-80px);
-}
-
-.fadein.scrollin {
-    opacity: 1;
-    transform: translate(0,0);
-}
-
-footer h2 {
+footer h3 {
     text-align: center;
     background: #faffbf;
 }
