--- a/css/index.css
+++ b/css/index.css
@@ -89,16 +89,17 @@ body {
 }
 
 .wrapper .main_content .header {
-    padding: 20px;
+    padding: 15px;
     background: #fff;
     color: #717171;
     border-bottom: 1px solid #e0e4e8;
+    font-size: 25px;
 }
 
 .wrapper .main_content .info {
     margin: 20px;
     color: #717171;
-    line-height: 25px;
+    line-height: 15px;
 }
 
 .wrapper .main_content .info div {
@@ -108,6 +109,13 @@ body {
 img {
     max-width: 100%;
     width: 300px;
+}
+
+.wrapper .main_content .info .top-image {
+    width: 100%;
+    height: 480px;
+    background-size: cover;
+    background-position: center;
 }
 
 .wrapper .main_content .mb-600 {
