--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,6 @@ body {
     width: 200px;
     height: 100%;
     background: #3b58a8;
-    padding: 30px 0px;
     position: fixed;
 }
 
@@ -90,7 +89,7 @@ body {
 
 .wrapper .main_content .header {
     padding: 15px;
-    background: #fff;
+    background: #d2f3ce;
     color: #717171;
     border-bottom: 1px solid #e0e4e8;
     font-size: 25px;
