--- a/css/index.css
+++ b/css/index.css
@@ -105,6 +105,11 @@ body {
     margin-bottom: 20px;
 }
 
+.wrapper .main_content h2 {
+    text-align: center;
+}
+
+
 img {
     max-width: 100%;
     width: 300px;
